Bug 67467 - TABLE: Crash when renaming table in autoFormat dialog
Summary: TABLE: Crash when renaming table in autoFormat dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.2.2 release
Hardware: Other Linux (All)
: medium normal
Assignee: Ivan Timofeev (retired)
URL:
Whiteboard: BSA target:4.2.0 target:4.1.1 target:...
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-07-29 10:08 UTC by Tan Cuong
Modified: 2013-07-29 20:33 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
the screenshot of steps to rename tables before the app is exited (228.90 KB, application/vnd.oasis.opendocument.text)
2013-07-29 10:08 UTC, Tan Cuong
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tan Cuong 2013-07-29 10:08:58 UTC
Created attachment 83190 [details]
the screenshot of steps to rename tables before the app is exited

Problem description: When i add a table in Table>AutoFormat (such as myTable), then i want to rename it by click Table>AutoFormat>AutoFormat Dialog > Rename Button. I entered the new name and click Ok in the small Dialog, it crash immediately (the libreoffice Writer Window closed)

Current behavior: the libreoffice exited immediately after rename table

Expected behavior: the table in autoFormat is renamed

              
Operating System: Ubuntu
Version: 4.1.0.4 release
Comment 1 Ivan Timofeev (retired) 2013-07-29 18:18:27 UTC
Confirmed, I can reproduce it even in 4.0.2. Submitted a fix...
https://gerrit.libreoffice.org/#/c/5172/
Comment 2 Commit Notification 2013-07-29 20:05:32 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2f527be5513159c0aebd93f356cbd2b1dc04b253

fdo#67467: fix crash when renaming table in AutoFormat dialog



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Stahl 2013-07-29 20:21:53 UTC
fortunately it appears after a quick grepping that the other calls to ptr_vector::transfer() appear to use a different "from" container...
Comment 4 Commit Notification 2013-07-29 20:23:51 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=75ad317118aeb4cd875127d3918e5c912f56fbca&h=libreoffice-4-1

fdo#67467: fix crash when renaming table in AutoFormat dialog


It will be available in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2013-07-29 20:33:36 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c7bab3002a967b39b1d7be06dfa20fca9fd9f837&h=libreoffice-4-0

fdo#67467: fix crash when renaming table in AutoFormat dialog


It will be available in LibreOffice 4.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.