fdo#67467: fix crash when renaming table in AutoFormat dialog

this reverts 5031e17d4b11181be94448702b1026bd38e0b3c4 and uses
ptr_vector::release instead of ptr_vector::erase to prevent object deletion.
The use of "transfer" leads to "Assertion `(void*)&from != (void*)this' failed".

Change-Id: I77467ce9e1d9dd4b833032ebbe920cbb34d36675
Reviewed-on: https://gerrit.libreoffice.org/5172
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>